lab5/003-sg.tf
###
### Create the security group with firewall rules
###
resource "aws_security_group" "securitygroup_web_linux" {
  name        = "${var.prefix}-securitygroup-web-linux"
  description = "securitygroup_web_linux"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "ssh"
    to_port          = 22
    from_port        = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] 
  }

  ingress {
    description      = "http"
    to_port          = 80
    from_port        = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] 
  }

  ingress {
    description      = "https"
    to_port          = 443
    from_port        = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] 
  }

ingress {
    description      = "rds"
    to_port          = 3306
    from_port        = 3306
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
